2 more connections, test, oauth
